{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 43,
  "lineage": "7bb06aba-e355-0150-5159-835285258249",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0a73b5d815c46b0",
            "domain": "vpc",
            "id": "eipalloc-0b0a73b5d815c46b0",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "public_dns": "ec2-35-170-250-115.compute-1.amazonaws.com",
            "public_ip": "35.170.250.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-eip-practica-examen"
            },
            "tags_all": {
              "Name": "tf-eip-practica-examen"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw-practica-examen-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:internet-gateway/igw-0a9d4a1839acfe8bb",
            "id": "igw-0a9d4a1839acfe8bb",
            "owner_id": "808629563355",
            "tags": {
              "Name": "tf-igw-practica-examen-2"
            },
            "tags_all": {
              "Name": "tf-igw-practica-examen-2"
            },
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "dependencies": [
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0a73b5d815c46b0",
            "association_id": "eipassoc-07a1da0a38a4a9f1f",
            "connectivity_type": "public",
            "id": "nat-0f5c5b15c5197c730",
            "network_interface_id": "eni-0f1bac22ba86a5404",
            "private_ip": "10.0.1.194",
            "public_ip": "35.170.250.115",
            "subnet_id": "subnet-034dbfa33f0ea69d6",
            "tags": {
              "Name": "tf-nat-practica-examen-1"
            },
            "tags_all": {
              "Name": "tf-nat-practica-examen-1"
            }
          },
          "dependencies": [
            "aws_eip.example_eip",
            "aws_subnet.tf-public-subnet",
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-rt-practica-examen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:route-table/rtb-0cf554a97536f84f7",
            "id": "rtb-0cf554a97536f84f7",
            "owner_id": "808629563355",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:route-table/rtb-0ac49ee79e7b6a96f",
            "id": "rtb-0ac49ee79e7b6a96f",
            "owner_id": "808629563355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9d4a1839acfe8bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-practica-examen"
            },
            "tags_all": {
              "Name": "tf-rt-practica-examen"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw-practica-examen-2",
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7422bf8e55d9d1",
            "route_table_id": "rtb-0cf554a97536f84f7",
            "subnet_id": "subnet-034dbfa33f0ea69d6"
          },
          "dependencies": [
            "aws_route_table.tf-rt-practica-examen",
            "aws_subnet.tf-public-subnet",
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:subnet/subnet-05b462c9e2a5a9e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b462c9e2a5a9e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808629563355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-private-subnet"
            },
            "tags_all": {
              "Name": "tf-private-subnet"
            },
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "dependencies": [
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:subnet/subnet-0270221042479bfeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0270221042479bfeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808629563355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-public-subnet"
            },
            "tags_all": {
              "Name": "tf-public-subnet"
            },
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "dependencies": [
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:subnet/subnet-034dbfa33f0ea69d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034dbfa33f0ea69d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808629563355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f98efdeeae7322f1"
          },
          "dependencies": [
            "aws_vpc.my_vpc_practica_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_practica_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808629563355:vpc/vpc-0f98efdeeae7322f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c9b5e04c08e32e3",
            "default_route_table_id": "rtb-0e9b26769f0a84dbc",
            "default_security_group_id": "sg-0802c15c7fa076b00",
            "dhcp_options_id": "dopt-04c3f79d6dc0b084d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f98efdeeae7322f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9b26769f0a84dbc",
            "owner_id": "808629563355",
            "tags": {
              "Name": "my-vpc-practica-tf"
            },
            "tags_all": {
              "Name": "my-vpc-practica-tf"
            }
          }
        }
      ]
    }
  ]
}